# tmp_pr_steam_networking_sockets_ci

./: .gitmodules  CMakeInstall.txt  CMakeLists.txt  README.md
.github/: pragma_module_info.json
.github/workflows/: build-linux-ci.yml  build-windows-ci.yml
build_scripts/: GameNetworkingSockets.patch  setup.py
client/: CMakeLists.txt
client/src/: pr_module.cpp
server/: CMakeLists.txt
server/src/: pr_module.cpp
shared/include/: pr_steam_networking_shared.hpp
shared/include/pr_steam_networking/: common.hpp  header_data.hpp  util_module.hpp  util_net_packet.hpp
shared/src/: common.cpp  util_module.cpp  util_net_packet.cpp
steam_client/: CMakeLists.txt
steam_server/: CMakeLists.txt
